@@ -1,3 +1,7 @@
+2012-07-20         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* README: Include build instructions.
+
 2012-07-19         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* configure.ac: Improve test for PostgreSQL connectivity.
